<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/android_gridview_example"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <GridView
        android:id="@+id/grid_view_image_text"
        android:layout_width="fill_parent"
        android:layout_height="203dp"
        android:columnWidth="110dp"
        android:gravity="center"
        android:stretchMode="columnWidth"
        android:numColumns="3"></GridView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/cameraBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ui_cam"
            android:onClick="share"/>

        <TextView
            android:id="@+id/minionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/Name"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

    </RelativeLayout>




    <ImageView
        android:id="@+id/charImg"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/feedBtn"
            style="?android:attr/buttonBarStyle"
            android:layout_width="75dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_button"
            android:onClick="feed"
            android:text="@string/feedStr"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/trainBtn"
            style="?android:attr/buttonBarStyle"
            android:layout_width="75dp"
            android:layout_height="70dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_button"
            android:onClick="train"
            android:text="@string/trainStr"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/careBtn"
            style="?android:attr/buttonBarStyle"
            android:layout_width="75dp"
            android:layout_height="70dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_button"
            android:onClick="care"
            android:text="@string/careStr"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>