<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/bg" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:gravity="center"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="36sp" />

    <ImageView
        android:id="@+id/myImageView2"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignBottom="@id/titleText"
        android:layout_marginBottom="-180dp"
        android:layout_marginStart="120dp"
        android:contentDescription="@string/app_name"
        android:scaleX="-1"
        android:src="@drawable/promo1" />

    <ImageView
        android:id="@+id/myImageView3"
        android:layout_width="wrap_content"
        android:layout_alignBottom="@id/titleText"
        android:layout_marginBottom="-180dp"
        android:layout_marginEnd="120dp"
        android:contentDescription="@string/app_name"
        android:layout_height="200dp"
        android:src="@drawable/promo2" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/myImageView2"
        android:layout_marginBottom="-60dp"
        android:fontFamily="monospace"
        android:hint="@string/hintText"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/save"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/nameText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-90dp"
        android:onClick="save"
        android:text="@string/StartText" />

</RelativeLayout>